--- a/src/style/components/_footer.scss
+++ b/src/style/components/_footer.scss
@@ -29,6 +29,10 @@
 .footer__svg {
   min-width: adaptiv-prop(35.98, 28.97);
   height: adaptiv-prop(50, 40.58);
+
+  @media all and (max-width: 1200px) {
+  width: 28.97px;
+  }
 }
 
 .footer__title {
